--- a/delightreading-server/src/main/resources/templates/myhome.html
+++ b/delightreading-server/src/main/resources/templates/myhome.html
@@ -9,11 +9,21 @@
     <div style="float:left">
         <span style="font-weight:bold">User: </span><span sec:authentication="name"></span>
     </div>
+    <div style="float:none">&nbsp;</div>
+    <div style="float:right">
+        <form action="#" th:action="@{/logout}" method="post">
+            <input type="submit" value="Logout" />
+        </form>
+    </div>
 </div>
 <h1>OAuth 2.0 Login with Spring Security</h1>
+<div>
+    You are successfully logged in <span style="font-weight:bold" th:text="${userName}"></span>
+    via the OAuth 2.0 Client <span style="font-weight:bold" th:text="${clientName}"></span>
+</div>
 <div>&nbsp;</div>
-<div sec:authorize="isAnonymous()">
-    <a href="/login" th:href="@{/login}">Login</a>
+<div>
+    <a href="/userinfo" th:href="@{/userinfo}">Display User Info</a>
 </div>
 </body>
 </html>
