--- a/delightreading-server/src/main/resources/templates/index.html
+++ b/delightreading-server/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
     <div style="float:left">
-        <span style="font-weight:bold">User: </span><span sec:authentication="name"></span>
+        <span style="font-weight:bold">User: </span>${user}<span sec:authentication="name"></span>
     </div>
 </div>
 <h1>OAuth 2.0 Login with Spring Security</h1>
